--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&family=Fredoka:wght@300..700&display=swap');
+
 :root{
     --branco: #FFFFFF;
     --roxo:#613E4D;
     --rosa:#DB518D;
     --amarelo: #DBB251;
     --verde: #88DB9E;
+    --botao-inativo:rgba(97, 62, 77, 0.5);
+    --botao-ativo:rgba(97, 62, 77, 0.25);
 }
