--- a/style.css
+++ b/style.css
@@ -46,4 +46,7 @@ body{
     align-items: center;
     width: 100%;
     border-bottom: 4px solid var(--rosa);
+    border-left: 2px solid var(--rosa);
+    border-right: 2px solid var(--rosa);
+    border-top: none;
 }
