--- a/style.css
+++ b/style.css
@@ -54,4 +54,9 @@ body{
 .botao:first-child{
     border-radius: 40px 40px 0 0;
 }
-
+ @media screen and (min-widht: 768px) {
+    .botoes{
+        display: flex;
+    }
+ }
+    
