--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body{
 
 .botao{
     font-family: 'Chakra Petch', Sans-Serif;
-    background-color: var(--botao-inativo);
+    background-color: var(--botao-ativo);
     color: var(--branco);
     display: flex;
     justify-content: center;
