--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body{
 }
 
 .ativo{
-    background-color: var(--botao-ativo);
+    background-color: var(--botao-inativo);
     border-bottom: 4px solid var(--rosa)
 }
 
