--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body{
 
 .ativo{
     background-color: var(--botao-inativo);
-    border-bottom: 4px solid var(--rosa)
+    border-bottom: 4px solid var(--roxo)
 }
 
  @media screen and ( min-width: 768px) {
