--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body{
 }
 
 .abas-textos{
-    background-color : var(--roxo)
+    background-color : var(--roxo);
     padding: 40px;
     border-radius: 0 0 40px 40px ;
 }
