--- a/style.css
+++ b/style.css
@@ -74,6 +74,10 @@ body{
     display: block;
 }
 
+.aba-conteudo{
+    display: none;
+}
+
  @media screen and ( min-width: 768px) {
     .botoes{
         display: flex;
