--- a/style.css
+++ b/style.css
@@ -78,6 +78,17 @@ body{
     display: none;
 }
 
+.aba-conteudo-titulo-principal{
+    font-size: 28 px;
+    text-align: center;
+}
+
+.aba-conteudo-titulo-secundario{
+    text-align: center;
+    color: var(--rosa);
+    text-transform: uppercase;
+}
+
  @media screen and ( min-width: 768px) {
     .botoes{
         display: flex;
