--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body{
 
 .aba-conteudo-titulo-secundario{
     text-align: center;
-    color: var(--rosa);
+    color: var(--branco);
     text-transform: uppercase;
 }
 
